# qsv-duct

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/qsv/: __init__.py  count.py  index.py  sample.py  slice.py  table.py
tests/: test_count.py  test_data.py  test_index.py  test_table.py
tests/data/: fruits.csv
